<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/divider_in_settings"
            app:showDividers="beginning|middle|end">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:divider="@drawable/divider_in_settings_inner"
                app:showDividers="middle">

                <TextView
                    android:id="@+id/intro"
                    style="@style/Widget.Settings.Item"
                    android:text="@string/intro" />

                <TextView
                    android:id="@+id/about"
                    style="@style/Widget.Settings.Item"
                    android:text="@string/about" />

                <TextView
                    android:id="@+id/service"
                    style="@style/Widget.Settings.Item"
                    android:text="@string/service" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:divider="@drawable/divider_in_settings_inner"
                app:showDividers="middle">

                <TextView
                    android:id="@+id/password"
                    style="@style/Widget.Settings.Item"
                    android:text="@string/modify_password"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/clean"
                    style="@style/Widget.Settings.Item"
                    android:text="@string/wipe_clean"
                    android:visibility="gone" />
            </android.support.v7.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/sign_out"
                style="@style/Widget.Settings.Item"
                android:gravity="center"
                android:text="@string/sign_out"
                android:visibility="gone" />
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

    <include layout="@layout/layout_toolbar" />

</merge>