<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cur_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:errorTextAppearance="@style/TextAppearance.SignIn.Error"
        app:hintTextAppearance="@style/TextAppearance.SignIn.Hint">

        <EditText
            android:id="@+id/cur_password"
            style="@style/TextAppearance.SignIn.Input"
            android:hint="@string/current_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:errorTextAppearance="@style/TextAppearance.SignIn.Error"
        app:hintTextAppearance="@style/TextAppearance.SignIn.Hint">

        <EditText
            android:id="@+id/new_password"
            style="@style/TextAppearance.SignIn.Input"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/renew_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="false"
        app:errorTextAppearance="@style/TextAppearance.SignIn.Error"
        app:hintTextAppearance="@style/TextAppearance.SignIn.Hint">

        <EditText
            android:id="@+id/renew_password"
            style="@style/TextAppearance.SignIn.Input"
            android:hint="@string/renew_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>